# ChangeLog for dev-java/commons-dbcp
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-dbcp/ChangeLog,v 1.42 2008/01/27 19:19:14 betelgeuse Exp $

  27 Jan 2008; Petteri Räty <betelgeuse@gentoo.org>
  -commons-dbcp-1.2.1-r1.ebuild:
  Delete old version.

  25 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  commons-dbcp-1.2.2.ebuild:
  Stable on ppc, bug #199240.

  18 Nov 2007; Markus Rothe <corsair@gentoo.org> commons-dbcp-1.2.2.ebuild:
  Stable on ppc64; bug #199240

  17 Nov 2007; Dawid Węgliński <cla@gentoo.org> commons-dbcp-1.2.2.ebuild:
  Stable on x86 (bug #199240)

  17 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  commons-dbcp-1.2.2.ebuild:
  amd64 stable, bug #199240.

  07 Jun 2007; Markus Rothe <corsair@gentoo.org> commons-dbcp-1.2.2.ebuild:
  Added ~ppc64; bug #178701

  23 May 2007; Diego Pettenò <flameeyes@gentoo.org>
  commons-dbcp-1.2.1-r1.ebuild, commons-dbcp-1.2.2.ebuild:
  Put -v switch before the files to remove. Closes bug #173564 reported by
  Alessio Cassibba.

  15 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  -commons-dbcp-1.2.1.ebuild:
  Remove generation 1 ebuild.

*commons-dbcp-1.2.2 (15 May 2007)

  15 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +commons-dbcp-1.2.2.ebuild:
  Version bump. Added src_test. Fixes bug #178048.

  08 Apr 2007; Markus Rothe <corsair@gentoo.org>
  commons-dbcp-1.2.1-r1.ebuild:
  Stable on ppc64; bug #173145

  06 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
  commons-dbcp-1.2.1-r1.ebuild:
  Mark stable on amd64 wrt bug #173145.

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  commons-dbcp-1.2.1-r1.ebuild:
  ppc stable, bug #173145

  06 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  commons-dbcp-1.2.1-r1.ebuild:
  x86 stable, bug 173145

  02 Apr 2007; Vlastimil Babka <caster@gentoo.org>
  commons-dbcp-1.2.1-r1.ebuild:
  Change the order of jdk dependencies.
