@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST commons-dbcp-1.2.2-src.tar.gz 641291 RMD160 271dcf459e2a4693f193481130bef67ac42e26ab SHA1 34ce36c8bb2f0e125e668066ae938bf9391e88b9 SHA256 62ba04a48f14cfe7d3aa415fb3a57547955a63a6f422ac79ca1da08f3660edd9
-EBUILD commons-dbcp-1.2.2.ebuild 1451 RMD160 451344286e29e8db940ef7db13414f3f8dce4251 SHA1 52c4ec60398889ca9d52777431940a9aede842ec SHA256 ed6d06481195791704c3f2f114df7b816ab0aa12d58479a129a39f3eebc2305f
-MD5 726c0c5b7a177e53ce2b1ec27da5bf41 commons-dbcp-1.2.2.ebuild 1451
-RMD160 451344286e29e8db940ef7db13414f3f8dce4251 commons-dbcp-1.2.2.ebuild 1451
-SHA256 ed6d06481195791704c3f2f114df7b816ab0aa12d58479a129a39f3eebc2305f commons-dbcp-1.2.2.ebuild 1451
-MISC ChangeLog 5941 RMD160 55cd064e4253afc958bf17fa09e746bbbeee0896 SHA1 237f652e3f80cc4602e3da9289d76c5e7fae8dff SHA256 4b941332968894aface15282780cca13c0a8817eb00a52c949e28acf26592cf3
-MD5 c83c7bea2f832d223e7cc304b370cffa ChangeLog 5941
-RMD160 55cd064e4253afc958bf17fa09e746bbbeee0896 ChangeLog 5941
-SHA256 4b941332968894aface15282780cca13c0a8817eb00a52c949e28acf26592cf3 ChangeLog 5941
+EBUILD commons-dbcp-1.2.2.ebuild 1447 RMD160 bcfb9a0a3f80dff9554ce7e85d3a7ef70a2f9f4b SHA1 a0fe7e4f52c3f6659fd342d1702e72a560e696ea SHA256 805dc5259c1646441fccad890eb6809ea0ccf94a8eaee1d6bed0e0ad032d0dba
+MD5 ed0992f684ebcdc082ea84b7fdf5f057 commons-dbcp-1.2.2.ebuild 1447
+RMD160 bcfb9a0a3f80dff9554ce7e85d3a7ef70a2f9f4b commons-dbcp-1.2.2.ebuild 1447
+SHA256 805dc5259c1646441fccad890eb6809ea0ccf94a8eaee1d6bed0e0ad032d0dba commons-dbcp-1.2.2.ebuild 1447
+MISC ChangeLog 6052 RMD160 0b7f00f3b5baeb9da26838308be7432edbee16ec SHA1 f7915dd5f043bd715f1da6f842c46e6d8dc93b71 SHA256 f45a978c5e06ea9ea87f7fd1449cc3428cddd198ed45e42e1bdf3825232c096b
+MD5 70fee3d516111dc1f175bde883ea43ea ChangeLog 6052
+RMD160 0b7f00f3b5baeb9da26838308be7432edbee16ec ChangeLog 6052
+SHA256 f45a978c5e06ea9ea87f7fd1449cc3428cddd198ed45e42e1bdf3825232c096b ChangeLog 6052
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
@@ -20,7 +20,7 @@ SHA256 97af3a5716c35be3c4880c1b1f1b1df55455b4f78040259311eba32b420937a4 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHnNk2cxLzpIGCsLQRApjGAKCNWnxpkTFhuSwgZox20FC9T1+czwCfaqFZ
-x9aFG9OuNk5KZru7zCsDAb8=
-=O+CS
+iD8DBQFHnNoRcxLzpIGCsLQRAjraAJ9YimUY7TxakpZCpd15OxrXRJVJrgCgkt3j
+M0cTsRGsr3akGlHVYk1sf+M=
+=JiJz
 -----END PGP SIGNATURE-----
