@@ -1,7 +1,8 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-dbcp/commons-dbcp-1.2.2.ebuild,v 1.7 2007/11/25 12:12:24 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-dbcp/commons-dbcp-1.2.2.ebuild,v 1.8 2008/01/27 19:22:53 betelgeuse Exp $
 
+EAPI=1
 JAVA_PKG_IUSE="doc source test"
 
 inherit java-pkg-2 java-ant-2
@@ -9,8 +10,7 @@ inherit java-pkg-2 java-ant-2
 DESCRIPTION="Jakarta component providing database connection pooling API"
 HOMEPAGE="http://jakarta.apache.org/commons/dbcp/"
 SRC_URI="mirror://apache/jakarta/commons/dbcp/source/${P}-src.tar.gz"
-COMMON_DEP="
-		>=dev-java/commons-pool-1.3"
+COMMON_DEP=">=dev-java/commons-pool-1.3"
 RDEPEND=">=virtual/jre-1.4
 		${COMMON_DEP}"
 # FIXME doesn't like jdbc API changes with Java 1.6
@@ -19,9 +19,9 @@ DEPEND="|| (
 			=virtual/jdk-1.4*
 		)
 		test? (
-			=dev-java/junit-3.8*
-			=www-servers/tomcat-6*
-			>=dev-java/xerces-2.7
+			dev-java/junit:0
+			www-servers/tomcat:6
+			dev-java/xerces:2
 		)
 		${COMMON_DEP}"
 LICENSE="Apache-2.0"
