@@ -1,12 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST jcalendar-1.3.2.zip 667065 RMD160 4ebc0f9782601fe2b9d7e824085ce3453ad1b0f0 SHA1 c4751710234d8fbdeaec859ffe99499d64fa3d55 SHA256 57d7d6f79b6fad665c47ba4018e5de91013795e610c45937aadd1a843118e779
+EBUILD jcalendar-1.3.2-r1.ebuild 1101 RMD160 dfdb0129751b85902a8114cefbfe47fee3037c58 SHA1 52039725cf5f6a5da5438109d0ffe5d1a083601a SHA256 3095442b61db1e215de902011c9a9241e8cd7e5a076c4a9578bae32ee9bc6b4d
+MD5 d00dd1e4143c8c78c69baa13c3969246 jcalendar-1.3.2-r1.ebuild 1101
+RMD160 dfdb0129751b85902a8114cefbfe47fee3037c58 jcalendar-1.3.2-r1.ebuild 1101
+SHA256 3095442b61db1e215de902011c9a9241e8cd7e5a076c4a9578bae32ee9bc6b4d jcalendar-1.3.2-r1.ebuild 1101
 EBUILD jcalendar-1.3.2.ebuild 1276 RMD160 fabce1ccee69316f347ab9200364c96dd3d21e5a SHA1 ac5f61214d56185fc5561ca846fe5ab8fccb6fc1 SHA256 7c83fa699d779f9dfd9231df965a2f1062a317904387a362e2457ea44fc0e14b
 MD5 6841dd8ded6695bb1851dc0a77db4b36 jcalendar-1.3.2.ebuild 1276
 RMD160 fabce1ccee69316f347ab9200364c96dd3d21e5a jcalendar-1.3.2.ebuild 1276
 SHA256 7c83fa699d779f9dfd9231df965a2f1062a317904387a362e2457ea44fc0e14b jcalendar-1.3.2.ebuild 1276
-MISC ChangeLog 1998 RMD160 a266c6201cabdc7a8119014f6dc6eff2d25654d4 SHA1 b5a3bd14a40ddeaf38c76b391011babacd93f07f SHA256 786b562e3549c8543d59d9a8dddfec1af992f7f4c60c2937d8391c0111a93f72
-MD5 60a58c145392fee273e81c3324e0de7c ChangeLog 1998
-RMD160 a266c6201cabdc7a8119014f6dc6eff2d25654d4 ChangeLog 1998
-SHA256 786b562e3549c8543d59d9a8dddfec1af992f7f4c60c2937d8391c0111a93f72 ChangeLog 1998
+MISC ChangeLog 2155 RMD160 a7564c8fd93b8df5e21ce717867e3a1a72b27d84 SHA1 7c5750f97c666af727997fea90b0e32c2338fd7a SHA256 d609eb9b4cd6ce9517a71241fbce88b2e45109f610aa1884db5571677840a1bc
+MD5 e2e78022d9d055b6d84120a89b93ecd9 ChangeLog 2155
+RMD160 a7564c8fd93b8df5e21ce717867e3a1a72b27d84 ChangeLog 2155
+SHA256 d609eb9b4cd6ce9517a71241fbce88b2e45109f610aa1884db5571677840a1bc ChangeLog 2155
 MISC metadata.xml 568 RMD160 ff328933816d06034086613f256ae79d5ace5c03 SHA1 eddfaf9cdaeada2afda3e97fe7388aaace73281b SHA256 d64b1a1a2ea768be32d5e97966558993b46facea8796ff29d986689e918350e2
 MD5 df4fb07d939486e4decce98ffe33ea47 metadata.xml 568
 RMD160 ff328933816d06034086613f256ae79d5ace5c03 metadata.xml 568
@@ -14,3 +21,13 @@ SHA256 d64b1a1a2ea768be32d5e97966558993b46facea8796ff29d986689e918350e2 metadata
 MD5 1fac8074d8f4465b6abda6ee7900857d files/digest-jcalendar-1.3.2 238
 RMD160 029a8e9af8adb75150f0324b3f609598df8d0f10 files/digest-jcalendar-1.3.2 238
 SHA256 dcb4301f54fab04d35ef2a11437df1b5c98290738c3d68c85714e62b63991bee files/digest-jcalendar-1.3.2 238
+MD5 1fac8074d8f4465b6abda6ee7900857d files/digest-jcalendar-1.3.2-r1 238
+RMD160 029a8e9af8adb75150f0324b3f609598df8d0f10 files/digest-jcalendar-1.3.2-r1 238
+SHA256 dcb4301f54fab04d35ef2a11437df1b5c98290738c3d68c85714e62b63991bee files/digest-jcalendar-1.3.2-r1 238
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHnNpecxLzpIGCsLQRAoJ0AKCKrAUrcYki0vpB2FUAZYehiHYFeACffgLg
+B9wkGjgHbT0DyMSkD1T4FrA=
+=P/p/
+-----END PGP SIGNATURE-----
