@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/commons-dbcp
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-dbcp/ChangeLog,v 1.42 2008/01/27 19:19:14 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-dbcp/ChangeLog,v 1.43 2008/01/27 19:22:53 betelgeuse Exp $
+
+  27 Jan 2008; Petteri Räty <betelgeuse@gentoo.org>
+  commons-dbcp-1.2.2.ebuild:
+  Use EAPI=1 for slot deps.
 
   27 Jan 2008; Petteri Räty <betelgeuse@gentoo.org>
   -commons-dbcp-1.2.1-r1.ebuild:
